fix whole overflow logic (finally yay)

--- a/css/global.css
+++ b/css/global.css
@@ -9,8 +9,6 @@
 
 html, body {
     overscroll-behavior-y: none;
-    width: 100vw;
-    height: 100%;
 }
 
 body {
@@ -18,10 +16,6 @@ body {
     font-family: 'Roboto', sans-serif;
     background-color: black;
     color: white;
-}
-
-main {
-    height: 100%;
     width: 100vw;
     overflow-x: hidden;
 }
