--- a/css/index.css
+++ b/css/index.css
@@ -348,6 +348,8 @@ section.video-section {
 
     .cta-section {
         min-height: 100vh;
+        width: 100vw;
+        overflow: hidden;
         display: flex;
         align-items: center;
         justify-content: center;
